# BoardGames

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
ConnectX/backend/: ConnectXBoard.cpp  ConnectXBoard.h  main.cpp
TicTacToe/: CMakeLists.txt  Makefile  README.md  main.cpp
TicTacToe/backend/: TicTacToe.cpp  TicTacToe.h  TicTacToeBoard.cpp  TicTacToeBoard.h  TicTacToeBoardDescriptor.cpp  TicTacToeBoardDescriptor.h
TicTacToe/engine/: TicTacToePlayer.cpp  TicTacToePlayer.h
TicTacToe/presentation/: TicTacToeDisplay.cpp  TicTacToeDisplay.h
TicTacToe/tests/: Makefile  TicTacToeBoardTest.cpp  TicTacToeDescriptorTest.cpp  TicTacToePlayerTest.cpp  TicTacToeTest.cpp  catch.hpp  test.cpp
